kubernetes/cluster/state.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: drain-lab
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: busybox
        command:
        - sh
        - -c
        - |
          echo "DB started on $(hostname)"
          sleep infinity
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
